<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewActivity2">

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editext_sensor"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_valor_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editext_valor"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editext_fecha"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editext_hora"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_observacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editext_observacion"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>